[gd_scene load_steps=23 format=2]

[ext_resource path="res://roda-assets/Mockups/car.png" type="Texture" id=1]
[ext_resource path="res://roda-assets/UI/BikeRepair/bike_overlay.png" type="Texture" id=2]
[ext_resource path="res://roda-assets/UI/BikeRepair/central_frame.png" type="Texture" id=3]
[ext_resource path="res://src/UI/CarSeatBeltUI.gd" type="Script" id=5]
[ext_resource path="res://src/UI/CharacterSlot.gd" type="Script" id=6]
[ext_resource path="res://roda-assets/Mockups/seat_highlight1.png" type="Texture" id=7]
[ext_resource path="res://roda-assets/Mockups/child_pressed.png" type="Texture" id=8]
[ext_resource path="res://roda-assets/Mockups/adult_pressed.png" type="Texture" id=9]
[ext_resource path="res://roda-assets/Mockups/seat_highlight4.png" type="Texture" id=10]
[ext_resource path="res://roda-assets/Mockups/adult_normal.png" type="Texture" id=11]
[ext_resource path="res://roda-assets/Mockups/seat_highlight3.png" type="Texture" id=12]
[ext_resource path="res://roda-assets/Mockups/baby_normal.png" type="Texture" id=13]
[ext_resource path="res://roda-assets/Mockups/teenager_pressed.png" type="Texture" id=14]
[ext_resource path="res://roda-assets/Mockups/child_normal.png" type="Texture" id=15]
[ext_resource path="res://roda-assets/Mockups/teenager_normal.png" type="Texture" id=16]
[ext_resource path="res://roda-assets/Mockups/seat_highlight2.png" type="Texture" id=17]
[ext_resource path="res://roda-assets/Mockups/baby_pressed.png" type="Texture" id=18]
[ext_resource path="res://roda-assets/Mockups/adult_disabled.png" type="Texture" id=19]
[ext_resource path="res://roda-assets/Mockups/teenager_disabled.png" type="Texture" id=20]
[ext_resource path="res://roda-assets/Mockups/child_disabled.png" type="Texture" id=21]
[ext_resource path="res://roda-assets/Mockups/baby_disabled.png" type="Texture" id=22]
[ext_resource path="res://src/UI/SeatRect.gd" type="Script" id=23]

[node name="CarSeatBeltUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 8.0
margin_right = -16.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 448.0
margin_bottom = 166.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 4

[node name="CarRect" type="TextureRect" parent="VBoxContainer/BackgroundRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterGrid" type="GridContainer" parent="VBoxContainer/BackgroundRect/CarRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_vertical = 0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Adult" type="TextureRect" parent="VBoxContainer/BackgroundRect/CarRect/CharacterGrid"]
margin_top = 8.0
margin_right = 64.0
margin_bottom = 72.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
size_flags_vertical = 4
script = ExtResource( 6 )

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/BackgroundRect/CarRect/CharacterGrid/Adult"]
margin_right = 40.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_disabled = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RowSpacer1" type="Control" parent="VBoxContainer/BackgroundRect/CarRect/CharacterGrid"]
margin_left = 68.0
margin_right = 380.0
margin_bottom = 81.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Teenager" type="TextureRect" parent="VBoxContainer/BackgroundRect/CarRect/CharacterGrid"]
margin_left = 384.0
margin_top = 8.0
margin_right = 448.0
margin_bottom = 72.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4
script = ExtResource( 6 )

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/BackgroundRect/CarRect/CharacterGrid/Teenager"]
margin_right = 40.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_disabled = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Child" type="TextureRect" parent="VBoxContainer/BackgroundRect/CarRect/CharacterGrid"]
margin_top = 93.0
margin_right = 64.0
margin_bottom = 157.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4
script = ExtResource( 6 )

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/BackgroundRect/CarRect/CharacterGrid/Child"]
anchor_right = 1.0
anchor_bottom = 1.0
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RowSpacer2" type="Control" parent="VBoxContainer/BackgroundRect/CarRect/CharacterGrid"]
margin_left = 68.0
margin_top = 85.0
margin_right = 380.0
margin_bottom = 166.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Baby" type="TextureRect" parent="VBoxContainer/BackgroundRect/CarRect/CharacterGrid"]
margin_left = 384.0
margin_top = 93.0
margin_right = 448.0
margin_bottom = 157.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4
script = ExtResource( 6 )

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/BackgroundRect/CarRect/CharacterGrid/Baby"]
margin_right = 40.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 18 )
texture_disabled = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highlights" type="Control" parent="VBoxContainer/BackgroundRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seat4" type="TextureRect" parent="VBoxContainer/BackgroundRect/Highlights"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 10 )
stretch_mode = 4
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/BackgroundRect/Highlights/Seat4"]
position = Vector2( 215, 37.755 )
texture = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="VBoxContainer/BackgroundRect/Highlights/Seat4"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VBoxContainer/BackgroundRect/Highlights/Seat4/Area2D"]
polygon = PoolVector2Array( 211.55, 38.9817, 188.19, 43.8205, 188.19, 66.8465, 201.872, 72.5195, 229.07, 72.5195, 233.575, 66.179, 233.408, 45.3222, 224.398, 38.648 )

[node name="Seat3" type="TextureRect" parent="VBoxContainer/BackgroundRect/Highlights"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 12 )
stretch_mode = 4
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/BackgroundRect/Highlights/Seat3"]
position = Vector2( 280.331, 37.755 )
z_index = 1
texture = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="VBoxContainer/BackgroundRect/Highlights/Seat3"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VBoxContainer/BackgroundRect/Highlights/Seat3/Area2D"]
polygon = PoolVector2Array( 263.043, 39.4184, 253.321, 46.3127, 253.144, 56.0354, 266.049, 66.1117, 285.317, 66.2885, 295.04, 62.7529, 295.04, 43.661, 280.368, 39.4184 )

[node name="Seat2" type="TextureRect" parent="VBoxContainer/BackgroundRect/Highlights"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 17 )
stretch_mode = 4
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/BackgroundRect/Highlights/Seat2"]
position = Vector2( 280.331, 65 )
z_index = 1
texture = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="VBoxContainer/BackgroundRect/Highlights/Seat2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VBoxContainer/BackgroundRect/Highlights/Seat2/Area2D"]
polygon = PoolVector2Array( 261.491, 71.4186, 253.315, 78.7025, 255.247, 92.2297, 263.126, 95.7973, 284.383, 97.2838, 295.235, 88.9594, 290.626, 76.77, 273.978, 72.3105 )

[node name="Seat1" type="TextureRect" parent="VBoxContainer/BackgroundRect/Highlights"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
stretch_mode = 4
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/BackgroundRect/Highlights/Seat1"]
position = Vector2( 280.331, 99.5027 )
z_index = 1
texture = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="VBoxContainer/BackgroundRect/Highlights/Seat1"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VBoxContainer/BackgroundRect/Highlights/Seat1/Area2D"]
polygon = PoolVector2Array( 261.535, 104.179, 254.941, 111.615, 255.783, 121.016, 261.956, 130.136, 282.722, 130.276, 293.666, 124.383, 291.421, 107.406, 273.742, 104.6 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 170.0
margin_right = 448.0
margin_bottom = 190.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DriveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 256.0
margin_bottom = 20.0
rect_min_size = Vector2( 64, 0 )
text = "DRIVE!!!"
__meta__ = {
"_edit_use_anchors_": false
}
